--- a/client/Android/app/src/main/AndroidManifest.xml
+++ b/client/Android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.AppActivity" />
 
         <service
             android:name=".auth.AuthenticatorService"
